; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/extr_driver.c_test_merge_driver__set_forces_text.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/extr_driver.c_test_merge_driver__set_forces_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"merge.default\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"custom\00", align 1
@repo_index = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [18 x i8] c"automergeable.txt\00", align 1
@automergeable_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_driver__set_forces_text() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = call i32 @set_gitattributes_to(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %3 = load i32, i32* @repo, align 4
  %4 = call i32 @cl_repo_set_string(i32 %3, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 (...) @merge_branch()
  %6 = load i32, i32* @repo_index, align 4
  %7 = call %struct.TYPE_4__* @git_index_get_bypath(i32 %6, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i32 0)
  store %struct.TYPE_4__* %7, %struct.TYPE_4__** %1, align 8
  %8 = call i32 @cl_assert(%struct.TYPE_4__* %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = call i32 @cl_assert_equal_oid(i32* @automergeable_id, i32* %10)
  ret void
}

declare dso_local i32 @set_gitattributes_to(i8*) #1

declare dso_local i32 @cl_repo_set_string(i32, i8*, i8*) #1

declare dso_local i32 @merge_branch(...) #1

declare dso_local i32 @cl_assert(%struct.TYPE_4__*) #1

declare dso_local %struct.TYPE_4__* @git_index_get_bypath(i32, i8*, i32) #1

declare dso_local i32 @cl_assert_equal_oid(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
